bk_ida/gccida/c0/apply_change_group
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_change_group/src/recog.c:795:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)object), object->fld[0].rtx) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_change_group/src/recog.c:795:42: error: expected expression
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)object), object->fld[0].rtx) ) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_change_group/src/recog.c:803:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = ( rtx)object[2]; 
            ^~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_change_group/src/obj/recog.o] Error 1
